--- a/app/views/mainPage.scala.html
+++ b/app/views/mainPage.scala.html
@@ -39,7 +39,7 @@
   <div class="title">
     <h2>Welcome to ULook!</h2>
         <input type="text" name="search" placeholder="Search..">
-    <a href="javascript:void(0);">Sign in</a>
+    <a href="javascript:void(0);">Sign out</a>
   </div>
 
   <article class="larg">
