Addadd files via upload

--- a/app/views/myItems.scala.html
+++ b/app/views/myItems.scala.html
@@ -9,7 +9,7 @@
  <span class="bckg"></span>
 <header>
 
-<link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/mainPage.css")">
+<link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/myItems.css")">
   <h1>Ulook</h1>
   <nav>
     <ul>
