--- a/app/views/myItems.scala.html
+++ b/app/views/myItems.scala.html
@@ -59,21 +59,21 @@
          <img class ="shoes" src = "@routes.Assets.versioned("images/roshe.jpg")" height ="230" width = "230"></img>
             <a> <img class ="fav" src = "@routes.Assets.versioned("images/star.png")" height ="30" width = "30"></img></a>
       </ul> 
-      <ul class = "container">
+      <ul class = "container one">
          <button class = "add" type="button">Add To Outfit</button>
             <a href ="#" class = "tooltip">
             <img src = "@routes.Assets.versioned("images/info.png")" height="25" >
             <span><ul><li>Price - $120  </li>
             <li>Material - Leather  </li>
             </ul></span></a>
-      </ul><ul class = "container">
+      </ul><ul class = "container two">
          <button class = "add" type="button">Add To Outfit</button>
             <a href ="#" class = "tooltip">
             <img src = "@routes.Assets.versioned("images/info.png")" height="25" >
             <span><ul><li>Price - $60</li>
             <li>Material - Cloth</li>
             </ul></span></a>
-      </ul><ul class = "container">
+      </ul><ul class = "container three">
          <button class = "add" type="button">Add To Outfit</button>
             <a href ="#" class = "tooltip">
             <img src = "@routes.Assets.versioned("images/info.png")" height="25" >
