--- a/app/views/mainPage.scala.html
+++ b/app/views/mainPage.scala.html
@@ -19,7 +19,7 @@
         <a href="javascript:void(0);" data-title="Projects">Get inspire</a>
       </li>
       <li>
-        <a href="javascript:void(0);" data-title="Team">Recommended</a>
+        <a href="@routes.HomeController.recommend" data-title="Team">Recommended</a>
       </li>
       <li>
         <a href="@routes.HomeController.myItems()" data-title="Diary">My items</a>
