--- a/app/views/myItems.scala.html
+++ b/app/views/myItems.scala.html
@@ -13,7 +13,7 @@
         <a href="javascript:void(0);">Get inspired</a>
       </li>
       <li>
-        <a href="javascript:void(0);" data-title="Team">Recommended</a>
+        <a href="@routes.HomeController.recommend" data-title="Team">Recommended</a>
       </li>
       <li>
         <a href="javascript:void(0);" data-title="Diary">My items</a>
