--- a/app/views/recommend.scala.html
+++ b/app/views/recommend.scala.html
@@ -4,7 +4,6 @@
  * two arguments, a `String` for the title of the page and an `Html`
  * object to insert into the body of the page.
  *@
-@(title: String)(content: Html)
 
 
  <span class="bckg"></span>
@@ -19,10 +18,10 @@
         <a href="javascript:void(0);" data-title="Projects">Get inspire</a>
       </li>
       <li>
-        <a href="javascript:void(0);" data-title="Team">Recommended</a>
+        <a href="@routes.HomeController.recommend" data-title="Team">Recommended</a>
       </li>
       <li>
-        <a href="javascript:void(0);" data-title="Diary">My items</a>
+        <a href="@routes.HomeController.myItems()" data-title="Diary">My items</a>
       </li>
       <li>
         <a href="javascript:void(0);" data-title="Timeline">My Outfits</a>
