--- a/app/views/mainPage.scala.html
+++ b/app/views/mainPage.scala.html
@@ -16,7 +16,7 @@
     <ul>
       <li>
 
-        <a href="javascript:void(0);" data-title="Projects">Get inspire</a>
+        <a href="@routes.HomeController.getInspired()" data-title="Projects">Get inspired</a>
       </li>
       <li>
         <a href="@routes.HomeController.recommend()" data-title="Team">Recommended</a>
@@ -28,7 +28,7 @@
         <a href="javascript:void(0);" data-title="Timeline">My Outfits</a>
       </li>
       <li>
-        <a href="javascript:void(0);" data-title="Settings">Search</a>
+        <a href""@routes.HomeController.search()" data-title="Settings">Search</a>
       </li>
 
     </ul>
