--- a/app/views/mainPage.scala.html
+++ b/app/views/mainPage.scala.html
@@ -28,7 +28,7 @@
         <a href="javascript:void(0);" data-title="Timeline">My Outfits</a>
       </li>
       <li>
-        <a href""@routes.HomeController.search()" data-title="Settings">Search</a>
+        <a href="@routes.HomeController.search()" data-title="Settings">Search</a>
       </li>
 
     </ul>
