--- a/app/views/myItems.scala.html
+++ b/app/views/myItems.scala.html
@@ -11,27 +11,7 @@
 
 <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/myItems.css")">
   <h1>Ulook</h1>
-  <nav>
-    <ul>
-      <li>
-
-      <a href="@routes.HomeController.getInspired()" data-title="Projects">Get inspired</a>
-      </li>
-      <li>
-        <a href="@routes.HomeController.recommend()" data-title="Team">Recommended</a>
-      </li>
-      <li>
-        <a href="@routes.HomeController.myItems()" data-title="Diary">My items</a>
-      </li>
-      <li>
-        <a href="javascript:void(0);" data-title="Timeline">My Outfits</a>
-      </li>
-      <li>
-        <a href="@routes.HomeController.search()" data-title="Settings">Search</a>
-      </li>
-
-    </ul>
-  </nav>
+  @navigator()
 </header>
 <main>
 
