--- a/app/views/signUpPage.scala.html
+++ b/app/views/signUpPage.scala.html
@@ -7,64 +7,48 @@
 @()
 
 <!DOCTYPE html>
-<html lang="en">
-    <head>
-        <title>myULook</title>
-                <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/mainPageandSignUp1.css")">
-	</head>
-		<body>
- 			<ul id="tools">
-				<li>
-                      Already have account? sign in here <input type="submit" value="Sign in" />
-                      </form>
-                </li>
-            </ul>
-	<center>
-		<h1>Welcome to ULook!</h1>
-		<hr>
-
-	</center>
-
-	<h1>Sign Up</h1>
-		<hr>
-			<form>
-			<table width="0" border="0" cellspacing="0" cellpadding="0">
-			<tr>
-			<td>username：</td>
-			<td><input type="text" name="username"/></td>
-		</tr>
-		<tr>
-			<td>password： </td>
-			<td><input type="password" name="password"/></td>
-		</tr>
-
-		<tr>
-			<td>Please enter your password again：</td>
-			<td><input type="password" name="confirmpass"/></td>
-		</tr>
-
-		<tr>
-			<td>Email Adress：</td>
-			<td><input type="text" name="Email"/></td>
-		</tr>
-
-
-		<tr>
-			<td colspan="2"><input type="submit" value="submit"/>
-			<input type="submit" value="cancel"/> 
-			</td>
-		</tr>
-		</table>
-		</form>
-		<center>
-			
-					<input type="button" value="Begin browsing" style="height=200px;width=1000px;" /> 
+<html>
+<head>
+		<meta charset="utf-8">
+		<link href="css/style.css" rel='stylesheet' type='text/css' />
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
+		  <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/SignUp.css")" rel='stylesheet' type='text/css' />
 		
-
+</head>
  
+<body>
+	<div class="main">
 
+				 <div class="inset">
+				 	<div class="social-icons">
+		    			 <div class="span"><a href="#"><img src="@routes.Assets.versioned("images/fb.png")" alt=""/><i>Connect with Facebook </i><div class="clear"></div></a></div>	
+    					 <div class="span1"><a href="#"><img src="@routes.Assets.versioned("images/t-bird.png")" alt=""/><i>Connect with Twitter</i><div class="clear"></div></a></div>
+    					 <div class="clear"></div>
+					</div>
+				 </div>	
+				 <h2>Or sign up with</h2>
+				 <form>
+							<div class="lable">
+		                     	<input type="text" class="text" value="UserName" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'User Name';}" >
 
-
-        <script src="@routes.Assets.versioned("javascripts/main.js")" type="text/javascript"></script>
-    </body>
+		                     
+		                    </div>
+		                    <div class="clear"> </div>
+		                    <div class="lable-2">
+		                    <input type="text" class="text" value="Password" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Password';}">
+		                   
+							</div>
+							<div class="clear"> </div>
+							
+								 <div class="submit">
+									<input type="submit" onclick="myFunction()" value="Create account" >
+									<input type="submit" onclick="myFunction()" value="Cancel" >
+								</div>
+									<div class="clear"> </div>
+									
+							 </form>
+	
+	 
+</body>
 </html>
