sh: wq: command not found

--- a/app/views/navigator.scala.html
+++ b/app/views/navigator.scala.html
@@ -10,7 +10,7 @@
         <a href="@routes.HomeController.myItems()" data-title="Diary">My items</a>
       </li>
       <li>
-        <a href="javascript:void(0);" data-title="Timeline">My Outfits</a>
+        <a href="@routes.HomeController.myOutfits()" data-title="Timeline">My Outfits</a>
       </li>
       <li>
         <a href="@routes.HomeController.search()" data-title="Settings">Search</a>
