--- a/app/views/navigator.scala.html
+++ b/app/views/navigator.scala.html
@@ -1,13 +1,14 @@
   <nav>
+   
     <ul>
       <li>
-        <a href="@routes.HomeController.getInspired()" data-title="Projects">Get inspired</a>
+        <a href="@routes.HomeController.getInspired()" data-title="Projects">Get Inspired!</a>
       </li>
       <li>
         <a href="@routes.HomeController.recommend()" data-title="Team">Recommended</a>
       </li>
       <li>
-        <a href="@routes.HomeController.myItems()" data-title="Diary">My items</a>
+        <a href="@routes.HomeController.myItems()" data-title="Diary">My Items</a>
       </li>
       <li>
         <a href="@routes.HomeController.myOutfits()" data-title="Timeline">My Outfits</a>
