--- a/app/views/myItems.scala.html
+++ b/app/views/myItems.scala.html
@@ -16,7 +16,7 @@
 <main>
 
   <div class="title">
-    <h2>My Outfits</h2>
+    <h2>My Items</h2>
     <a href="javascript:void(0);">Sign in</a>
    </div>
    <div class="container-fluid">
@@ -47,7 +47,7 @@
             <div class="col-md-4"><strong>Type</strong></div>
         </div>
    <div class="card-deck mt-1 ml-2 mb-2 mr-1">
-         <div class="card ml-3 mt-1 anyClass">
+         <div class="card ml-3 mt-1 scrollbox">
             <div class="form-check form-inline mt-2 mb-2">
                <label class="form-check-label">
                <input class="form-check-input" type="checkbox" value="">
@@ -117,7 +117,7 @@
                <input type="text" class="form-control-sm" id="inlineFormInput" placeholder="Maximum Price">
             </form>
          </div>
-         <div class="card ml-3 mt-1 anyClass">
+         <div class="card ml-3 mt-1 scrollbox">
             <div class="form-check form-inline mt-2 mb-2">
                <label class="form-check-label">
                <input class="form-check-input" type="checkbox" value="">
