--- a/app/views/recommend.scala.html
+++ b/app/views/recommend.scala.html
@@ -104,7 +104,7 @@
             </div>   
          </div>
          <div class="card ml-3 mt-1">
-            <form class="form-inline-sm mt-3 ml-2">
+            <form class="form-inline-sm mt-4 text-center">
                <input type="text" class="form-control-sm" id="inlineFormInput" placeholder="Minimum Price">
                <label class="sr-only" for="priceFrom">priceFrom</label>
                <label class="sr-only" for="priceTo">priceTo</label>
