--- a/app/views/search.scala.html
+++ b/app/views/search.scala.html
@@ -110,7 +110,7 @@
             </div>   
          </div>
          <div class="card ml-3 mt-1">
-            <form class="form-inline-sm mt-3 ml-2">
+            <form class="form-inline-sm mt-4 text-center">
                <input type="text" class="form-control-sm" id="inlineFormInput" placeholder="Minimum Price">
                <label class="sr-only" for="priceFrom">priceFrom</label>
                <label class="sr-only" for="priceTo">priceTo</label>
@@ -136,7 +136,7 @@
                Option2
                </label>
             </div> 
-            <div class="form-check form-inline mt-2 mb-2">
+            <div class="form-check form-inline mt-2 mb-2 ">
                <label class="form-check-label">
                <input class="form-check-input" type="checkbox" value="">
                Option2
