--- a/app/views/getInspired.scala.html
+++ b/app/views/getInspired.scala.html
@@ -23,7 +23,7 @@
    <div class="card mt-2">
       <div>
          <img class="img-valign mt-2 mb-2 ml-2" src="@routes.Assets.versioned("images/insta.png")" height="60" width="60">
-         <span><strong>Outfid of the Day! #OOTD</strong></span>
+         <span><strong>Outfit of the Day! #OOTD</strong></span>
       </div>
    </div>
    
