--- a/app/views/signUpPage.scala.html
+++ b/app/views/signUpPage.scala.html
@@ -28,9 +28,9 @@
 					</div>
 				 </div>	
 				 <h2>Or sign up with</h2>
-				 <form>
+				 <form action="@routes.HomeController.approach2("a")">
 							<div class="lable">
-		                     	<input type="text" class="text" value="UserName" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'User Name';}" >
+		                     	<input type="text" name = "s" class="text" value="UserName" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'User Name';}" >
 
 		                     
 		                    </div>
